feat: add new font (inter)

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,4 +1,6 @@
 ---
+import '@fontsource-variable/inter';
+
 import Footer from '../components/Footer.astro';
 
 interface Props {
@@ -18,8 +20,16 @@ const { title } = Astro.props;
     <meta name='generator' content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class='bg-black-bg text-white-text flex min-h-screen flex-col'>
-    <main class='flex-grow'></main>
+  <body class='flex min-h-screen flex-col bg-black-bg text-white-text'>
+    <main class='flex-grow'>
+      <slot />
+    </main>
     <Footer />
   </body>
 </html>
+
+<style>
+  * {
+    font-family: 'Inter Variable', sans-serif;
+  }
+</style>
