--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,7 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import BaseLayout from '../layouts/BaseLayout.astro';
 ---
 
-<Layout title='Yurik' />
+<BaseLayout title='Yurik'>
+  <h1 class="font-inter">Hi, I'm Yurik.</h1>
+</BaseLayout>
