feat: add home page and base layout
- Added "@fontsource-variable/newsreader" (^5.0.19) and
"@fontsource/ibm-plex-sans" fonts
- Modified styling to center contents on base layout

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,5 +3,39 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 ---
 
 <BaseLayout title='Yurik'>
-  <h1 class="font-inter">Hi, I'm Yurik.</h1>
+  <div class='flex max-w-2xl flex-col gap-8 text-base font-normal leading-6'>
+    <h1 class='font-semibold text-3xl '>Hi! I'm Yurik.</h1>
+    <p>
+      <span class='italic tracking-wider'>Product Engineer.</span> Building polished software and web experiences. Experimenting with
+      magical details in user interfaces. Webmaster at Linear.
+    </p>
+    <p>In the past I've collaborated with local and international non-governmental organization.</p>
+
+    <h2 class='font-semibold text-xl'>Now</h2>
+    <p>
+      Developing skill through doing, guiltlessly exploring passion and interests, imbuing qualit. Mindful that
+      everything around me is someone’s life work.
+    </p>
+    <p>
+      All I want to do is build websites. Typography, motion design, performance—the web is an endless medium of
+      opportunity and creativity of which I’ve only scratched the surface.
+    </p>
+    <p>
+      Enjoying deep, dark, boring dance music: songs that set the pace in the first ten seconds and maintain it for the
+      next ten minutes. Deep is a curation of my favorites. Soothed by the inherent energy of drum and bass—Drum has my
+      favorites.
+    </p>
+
+    <h2 class='font-semibold text-xl'>Connect</h2>
+    <p>Reach me at @pacocoursey or p@paco.me.</p>
+  </div>
 </BaseLayout>
+
+<style>
+  p {
+    font-family: 'IBM Plex Sans', sans-serif;
+  }
+  span {
+    font-family: 'Newsreader Variable', serif;
+  }
+</style>
