--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,7 @@
 ---
 import '@fontsource-variable/inter';
+import '@fontsource-variable/newsreader';
+import '@fontsource/ibm-plex-sans';
 
 import Footer from '../components/Footer.astro';
 
@@ -21,7 +23,7 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body class='flex min-h-screen flex-col bg-black-bg text-white-text'>
-    <main class='flex-grow'>
+    <main class='p mx-auto flex-grow px-4 py-24'>
       <slot />
     </main>
     <Footer />
