--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,37 +1,32 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
+import Works from '../components/Works.astro';
 ---
 
 <BaseLayout title='Yurik'>
   <div class='flex max-w-2xl flex-col gap-8 text-base font-normal leading-6'>
     <h1 class='text-3xl font-semibold'>Hi! I'm Yurik.</h1>
     <p>
-      <span class='italic tracking-wider'>Product Engineer.</span> Building polished software and web experiences. Experimenting
-      with magical details in user interfaces. Webmaster at Linear.
+      <span class='italic tracking-wider'>Product Engineer.</span> Velit dolore consectetur et id sit velit incididunt veniam.
+      Labore adipisicing elit mollit labore ea mollit Lorem culpa tempor ea quis cupidatat magna duis. Dolore et ad nisi
+      nostrud mollit aliqua et id deserunt. 
     </p>
-    <p>In the past I've collaborated with local and international non-governmental organization.</p>
+    <p>Dolor sint minim aliqua enim consequat nostrud ea.</p>
 
-    <div class="flex justify-evenly">
-      <a href='/projects'>Projects</a>
-      <a href='/writing'>Writing</a>
-    </div>
+    <Works />
 
     <h2 class='text-xl font-semibold'>Now</h2>
     <p>
-      Developing skill through doing, guiltlessly exploring passion and interests, imbuing qualit. Mindful that
-      everything around me is someone’s life work.
+      Incididunt cillum exercitation culpa sit voluptate Lorem veniam magna. Enim excepteur incididunt elit ut irure consequat enim qui tempor in. Aliqua adipisicing elit duis in dolore officia.
     </p>
     <p>
-      All I want to do is build websites. Typography, motion design, performance—the web is an endless medium of
-      opportunity and creativity of which I’ve only scratched the surface.
+      Incididunt quis irure et est anim qui ea irure officia nulla esse. Ut minim exercitation do occaecat id aute enim nostrud elit ea. Qui tempor magna nostrud sint aliqua. Nisi cillum aliqua dolore et ipsum deserunt culpa adipisicing cupidatat incididunt minim quis est.
     </p>
     <p>
-      Enjoying deep, dark, boring dance music: songs that set the pace in the first ten seconds and maintain it for the
-      next ten minutes. Deep is a curation of my favorites. Soothed by the inherent energy of drum and bass—Drum has my
-      favorites.
+      Deserunt adipisicing enim ut aliqua. Nisi esse veniam exercitation veniam duis ea deserunt. Elit sint occaecat sint commodo reprehenderit sint. Minim aliquip velit dolore velit aliqua laborum laboris nulla sint incididunt elit.
     </p>
 
-    <h2 class='text-xl font-semibold'>Connect</h2>
+    <h2 class='text-xl font-semibold'>Contact</h2>
     <p>Reach me at @pacocoursey or p@paco.me.</p>
   </div>
 </BaseLayout>
