--- a/src/pages/writing.astro
+++ b/src/pages/writing.astro
@@ -5,5 +5,5 @@ import BackBtn from '../components/BackBtn.astro';
 
 <BaseLayout title='Yurik | Blog'>
   <BackBtn />
-  <h1>Writing</h1>
+  <h1 class="text-3xl">Writing</h1>
 </BaseLayout>
