feat: update back button

--- a/src/components/BackBtn.astro
+++ b/src/components/BackBtn.astro
@@ -2,9 +2,9 @@
 import { Icon } from 'astro-icon/components';
 ---
 
-<a href='/' class='absolute left-10 top-10 flex gap-4 opacity-70 md:absolute md:left-48 md:top-36'>
-  <Icon name='lets-icons:back-light' />
-  <p class='italic'>back</p></a
+<a href='/' class='absolute left-5 top-5 flex gap-4 opacity-40 transition duration-300 ease-in-out hover:opacity-80'>
+  <Icon name='eva:diagonal-arrow-left-up-fill' />
+  <p class=''>Yurik</p></a
 >
 
 <style>
