feat: update footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,8 +3,8 @@ import getYear from '../utils/getYear';
 ---
 
 <footer class='border-t border-grey-text border-opacity-20 p-4 text-sm text-grey-text opacity-70'>
-  <div class='mx-auto flex max-w-2xl content-center justify-between'>
-    <p>Shine, constantly, and steadily</p>
+  <div class='tracking-tightest mx-auto flex max-w-2xl content-center items-center justify-between'>
+    <p class=''>UTC +7 @ Bintan Island, Indonesia</p>
     <p>{getYear}</p>
   </div>
 </footer>
