feat: Add works section

--- a/src/pages/experiences.astro
+++ b/src/pages/experiences.astro
@@ -3,7 +3,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 import BackBtn from '../components/BackBtn.astro';
 ---
 
-<BaseLayout title='Yurik | Writing'>
+<BaseLayout title='Yurik | Experiences'>
   <BackBtn />
-  <h1 class="text-3xl">Writing</h1>
+  <h1>Experiences</h1>
 </BaseLayout>
