--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -2,8 +2,8 @@
 const { title, description, url } = Astro.props;
 ---
 
-<div class='flex flex-col gap-2 py-4'>
-  <a href={url}>
+<div class='py-4'>
+  <a href={url} class="flex  flex-col gap-2">
     <h3 class='font-medium'>{title}</h3>
     <p class='text-grey-text'>{description}</p>
   </a>
