--- a/src/components/Works.astro
+++ b/src/components/Works.astro
@@ -6,25 +6,36 @@ import { writings } from '../data/writings';
 import { Icon } from 'astro-icon/components';
 ---
 
-<div class='flex justify-between overflow-y-auto pb-8 gap-12'>
-  <div class='max-w-52 shrink-0 sm:max-w-72'>
-    <h2 class='pb-2 pt-12 text-xs text-grey-text opacity-80'>
-      <a class='inline-flex items-center gap-2' href='/projects'
-        >PROJECTS<Icon name='eva:diagonal-arrow-right-up-outline' />
-      </a>
-    </h2>
-    {
-      projects.map((project) => (
-        <ProjectCard title={project.title} description={project.description} url={project.url} />
-      ))
-    }
+<div class='flex justify-between gap-12 overflow-y-auto'>
+  <div class='shrink-0'>
+    <div class='max-w-52 sm:max-w-72'>
+      <h2 class='pb-2 pt-12 text-xs text-grey-text opacity-80 transition duration-300 ease-in-out hover:opacity-100'>
+        <a class='inline-flex items-center gap-2' href='/projects'>PROJECTS<Icon name='lets-icons:arrow-right' /> </a>
+      </h2>
+      {
+        projects.map((project) => (
+          <ProjectCard title={project.title} description={project.description} url={project.url} />
+        ))
+      }
+    </div>
+
+    <div class='max-w-52 sm:max-w-72'>
+      <h2 class='pb-2 pt-12 text-xs text-grey-text opacity-80 transition duration-300 ease-in-out hover:opacity-100'>
+        <a class='inline-flex items-center gap-2' href='/experiences'
+          >EXPERIENCES<Icon name='lets-icons:arrow-right' />
+        </a>
+      </h2>
+      {
+        projects.map((project) => (
+          <ProjectCard title={project.title} description={project.description} url={project.url} />
+        ))
+      }
+    </div>
   </div>
 
   <div class='max-w-52 shrink-0 sm:max-w-72'>
-    <h2 class='pb-2 pt-12 text-xs text-grey-text opacity-70'>
-      <a class='inline-flex items-center gap-2' href='/writing'
-        >WRITINGS <Icon name='eva:diagonal-arrow-right-up-outline' /></a
-      >
+    <h2 class='pb-2 pt-12 text-xs text-grey-text opacity-80 transition duration-300 ease-in-out hover:opacity-100'>
+      <a class='inline-flex items-center gap-2' href='/writing'>WRITINGS <Icon name='lets-icons:arrow-right' /></a>
     </h2>
     {
       writings.map((writing) => (
