feat: update index page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,28 +5,32 @@ import Works from '../components/Works.astro';
 
 <BaseLayout title='Yurik'>
   <div class='flex max-w-2xl flex-col gap-8 text-base font-normal leading-6'>
-    <h1 class='text-3xl font-semibold'>Hi! I'm Yurik.</h1>
+    <div class='flex flex-col gap-2'>
+      <h1 class='text-3xl font-medium tracking-wide'>Yurik</h1>
+      <h1 class='text-lg font-medium tracking-wide text-grey-text opacity-60'>Product Engineer</h1>
+    </div>
     <p>
-      <span class='italic tracking-wider'>Product Engineer.</span> Velit dolore consectetur et id sit velit incididunt veniam.
-      Labore adipisicing elit mollit labore ea mollit Lorem culpa tempor ea quis cupidatat magna duis. Dolore et ad nisi
-      nostrud mollit aliqua et id deserunt. 
+      Velit dolore consectetur et id sit velit incididunt veniam. Labore adipisicing elit mollit labore ea mollit Lorem
+      culpa tempor ea quis cupidatat magna duis. Dolore et ad nisi nostrud mollit aliqua et id deserunt.
     </p>
     <p>Dolor sint minim aliqua enim consequat nostrud ea.</p>
-
     <Works />
-
-    <h2 class='text-xl font-semibold'>Now</h2>
+    <h2 class='pt-4 text-xl font-medium tracking-wide'>Updates</h2>
     <p>
-      Incididunt cillum exercitation culpa sit voluptate Lorem veniam magna. Enim excepteur incididunt elit ut irure consequat enim qui tempor in. Aliqua adipisicing elit duis in dolore officia.
+      Incididunt cillum exercitation culpa sit voluptate Lorem veniam magna. Enim excepteur incididunt elit ut irure
+      consequat enim qui tempor in. Aliqua adipisicing elit duis in dolore officia.
     </p>
     <p>
-      Incididunt quis irure et est anim qui ea irure officia nulla esse. Ut minim exercitation do occaecat id aute enim nostrud elit ea. Qui tempor magna nostrud sint aliqua. Nisi cillum aliqua dolore et ipsum deserunt culpa adipisicing cupidatat incididunt minim quis est.
+      Incididunt quis irure et est anim qui ea irure officia nulla esse. Ut minim exercitation do occaecat id aute enim
+      nostrud elit ea. Qui tempor magna nostrud sint aliqua. Nisi cillum aliqua dolore et ipsum deserunt culpa
+      adipisicing cupidatat incididunt minim quis est.
     </p>
     <p>
-      Deserunt adipisicing enim ut aliqua. Nisi esse veniam exercitation veniam duis ea deserunt. Elit sint occaecat sint commodo reprehenderit sint. Minim aliquip velit dolore velit aliqua laborum laboris nulla sint incididunt elit.
+      Deserunt adipisicing enim ut aliqua. Nisi esse veniam exercitation veniam duis ea deserunt. Elit sint occaecat
+      sint commodo reprehenderit sint. Minim aliquip velit dolore velit aliqua laborum laboris nulla sint incididunt
+      elit.
     </p>
-
-    <h2 class='text-xl font-semibold'>Contact</h2>
+    <h2 class='pt-4 text-xl font-medium tracking-wide'>Contact</h2>
     <p>Reach me at @pacocoursey or p@paco.me.</p>
   </div>
 </BaseLayout>
