feat: update index and work page styling

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,9 +4,9 @@ import Works from '../components/Works.astro';
 ---
 
 <BaseLayout title='Yurik'>
-  <div class='flex max-w-2xl flex-col gap-8 text-base font-normal leading-6'>
+  <div class='flex max-w-2xl flex-col gap-8 text-base font-normal leading-6 '>
     <div class='flex flex-col gap-2'>
-      <h1 class='text-3xl font-medium tracking-wide'>Yurik</h1>
+      <h1 class='text-3xl font-medium tracking-wide'>Yurik Yang</h1>
       <h1 class='text-lg font-medium tracking-wide text-grey-text opacity-60'>Product Engineer</h1>
     </div>
     <p>
@@ -15,7 +15,7 @@ import Works from '../components/Works.astro';
     </p>
     <p>Dolor sint minim aliqua enim consequat nostrud ea.</p>
     <Works />
-    <h2 class='pt-4 text-xl font-medium tracking-wide'>Updates</h2>
+    <h2 class='pt-4 font-medium tracking-wide '>Updates</h2>
     <p>
       Incididunt cillum exercitation culpa sit voluptate Lorem veniam magna. Enim excepteur incididunt elit ut irure
       consequat enim qui tempor in. Aliqua adipisicing elit duis in dolore officia.
@@ -30,8 +30,8 @@ import Works from '../components/Works.astro';
       sint commodo reprehenderit sint. Minim aliquip velit dolore velit aliqua laborum laboris nulla sint incididunt
       elit.
     </p>
-    <h2 class='pt-4 text-xl font-medium tracking-wide'>Contact</h2>
-    <p>Reach me at @pacocoursey or p@paco.me.</p>
+    <h2 class='pt-4 font-medium tracking-wide '>Contact</h2>
+    <p>Reach me at @yurikdevv or yurik@yurik.dev.</p>
   </div>
 </BaseLayout>
 
