feat: implement dark mode toggle

--- a/src/components/BackBtn.astro
+++ b/src/components/BackBtn.astro
@@ -2,9 +2,9 @@
 import { Icon } from 'astro-icon/components';
 ---
 
-<a href='/' class='absolute left-5 top-5 flex gap-4 opacity-40 transition duration-300 ease-in-out hover:opacity-80'>
+<a href='/' class='absolute left-5 top-5 flex gap-4 dark:opacity-40 opacity-60 transition duration-300 ease-in-out hover:opacity-80'>
   <Icon name='eva:diagonal-arrow-left-up-fill' />
-  <p class=''>Yurik</p></a
+  <p class="italic">home</p></a
 >
 
 <style>
