--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,9 +2,9 @@
 import getYear from '../utils/getYear';
 ---
 
-<footer class='border-t border-grey-text border-opacity-20 p-4 text-sm text-grey-text opacity-70'>
+<footer class='border-t border-grey-text dark:border-opacity-20 border-opacity-40 p-4 opacity-60 text-sm dark:text-grey-text opacity-100 dark:opacity-70'>
   <div class='tracking-tightest mx-auto flex max-w-2xl content-center items-center justify-between'>
-    <p class=''>UTC +7 @ Bintan Island, Indonesia</p>
+    <p>UTC +7 @ Bintan Island, Indonesia</p>
     <p>{getYear}</p>
   </div>
 </footer>
