--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -5,6 +5,6 @@ const { title, description, url } = Astro.props;
 <div class='py-4'>
   <a href={url} class="flex  flex-col gap-2">
     <h3 class='font-medium'>{title}</h3>
-    <p class='text-grey-text'>{description}</p>
+    <p class='dark:text-grey-text dark:opacity-80 opacity-70'>{description}</p>
   </a>
 </div>
