--- a/src/components/Works.astro
+++ b/src/components/Works.astro
@@ -9,7 +9,7 @@ import { Icon } from 'astro-icon/components';
 <div class='flex justify-between gap-16 overflow-y-auto'>
   <div class='shrink-0'>
     <div class='max-w-52 sm:max-w-72'>
-      <h2 class='pb-2 pt-12 text-xs text-grey-text opacity-80 transition duration-300 ease-in-out hover:opacity-100'>
+      <h2 class='pb-2 pt-12 text-xs dark:text-grey-text opacity-80 transition duration-300 ease-in-out hover:opacity-100'>
         <a class='inline-flex items-center gap-2' href='/projects'>PROJECTS<Icon name='lets-icons:arrow-right' /> </a>
       </h2>
       {
@@ -20,7 +20,7 @@ import { Icon } from 'astro-icon/components';
     </div>
 
     <div class='max-w-52 sm:max-w-72'>
-      <h2 class='pb-2 pt-12 text-xs text-grey-text opacity-80 transition duration-300 ease-in-out hover:opacity-100'>
+      <h2 class='pb-2 pt-12 text-xs dark:text-grey-text opacity-80 transition duration-300 ease-in-out hover:opacity-100'>
         <a class='inline-flex items-center gap-2' href='/experiences'
           >EXPERIENCES<Icon name='lets-icons:arrow-right' />
         </a>
@@ -34,7 +34,7 @@ import { Icon } from 'astro-icon/components';
   </div>
 
   <div class='max-w-52 shrink-0 sm:max-w-72'>
-    <h2 class='pb-2 pt-12 text-xs text-grey-text opacity-80 transition duration-300 ease-in-out hover:opacity-100'>
+    <h2 class='pb-2 pt-12 text-xs dark:text-grey-text opacity-80 transition duration-300 ease-in-out hover:opacity-100'>
       <a class='inline-flex items-center gap-2' href='/writing'>WRITINGS <Icon name='lets-icons:arrow-right' /></a>
     </h2>
     {
