--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Works from '../components/Works.astro';
   <div class='flex max-w-2xl flex-col gap-8 text-base font-normal leading-6 '>
     <div class='flex flex-col gap-2'>
       <h1 class='text-3xl font-medium tracking-wide'>Yurik Yang</h1>
-      <h1 class='text-lg font-medium tracking-wide text-grey-text opacity-60'>Product Engineer</h1>
+      <h1 class='text-lg font-medium tracking-wide dark:text-grey-text dark:opacity-80 opacity-70'>Product Engineer</h1>
     </div>
     <p>
       Velit dolore consectetur et id sit velit incididunt veniam. Labore adipisicing elit mollit labore ea mollit Lorem
