feat: update dark mode styling

--- a/src/components/DarkMode.astro
+++ b/src/components/DarkMode.astro
@@ -1,4 +1,4 @@
-<button id='darkModeBtn' class='absolute right-5 top-5'>
+<button id='darkModeBtn' class='absolute right-5 top-5 opacity-60'>
   <svg width='20px' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'>
     <path
       class='sun'
@@ -37,7 +37,7 @@
     fill: transparent;
   }
   :global(.dark) .moon {
-    fill: #E5E5E5;
+    fill: #a9a9a9;
   }
 </style>
 
