feat: update home page styling

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,11 +3,11 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 import Works from '../components/Works.astro';
 ---
 
-<BaseLayout title='Yurik'>
-  <div class='flex max-w-2xl flex-col gap-8 text-base font-normal leading-6 '>
+<BaseLayout title='Yurik | Home'>
+  <div class='flex max-w-2xl flex-col gap-8 text-base font-normal leading-6'>
     <div class='flex flex-col gap-2'>
       <h1 class='text-3xl font-medium tracking-wide'>Yurik Yang</h1>
-      <h1 class='text-lg font-medium tracking-wide dark:text-grey-text dark:opacity-80 opacity-70'>Product Engineer</h1>
+      <h1 class='text-lg font-medium tracking-wide opacity-70 dark:text-grey-text dark:opacity-80'>Product Engineer</h1>
     </div>
     <p>
       Velit dolore consectetur et id sit velit incididunt veniam. Labore adipisicing elit mollit labore ea mollit Lorem
@@ -15,7 +15,7 @@ import Works from '../components/Works.astro';
     </p>
     <p>Dolor sint minim aliqua enim consequat nostrud ea.</p>
     <Works />
-    <h2 class='pt-4 font-medium tracking-wide '>Updates</h2>
+    <h2 class='pt-4 font-medium tracking-wide'>Updates</h2>
     <p>
       Incididunt cillum exercitation culpa sit voluptate Lorem veniam magna. Enim excepteur incididunt elit ut irure
       consequat enim qui tempor in. Aliqua adipisicing elit duis in dolore officia.
@@ -30,7 +30,7 @@ import Works from '../components/Works.astro';
       sint commodo reprehenderit sint. Minim aliquip velit dolore velit aliqua laborum laboris nulla sint incididunt
       elit.
     </p>
-    <h2 class='pt-4 font-medium tracking-wide '>Contact</h2>
+    <h2 class='pt-4 font-medium tracking-wide'>Contact</h2>
     <p>Reach me at @yurikdevv or yurik@yurik.dev.</p>
   </div>
 </BaseLayout>
