--- a/src/pages/writing.astro
+++ b/src/pages/writing.astro
@@ -1,9 +1,88 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
 import BackBtn from '../components/BackBtn.astro';
+
+import WritingCardLeft from '../components/WritingCardLeft.astro';
+import WritingCardRight from '../components/WritingCardRight.astro';
 ---
 
 <BaseLayout title='Yurik | Writing'>
   <BackBtn />
-  <h1 class="text-3xl">Writing</h1>
+  <h1 class='p-12 text-center text-5xl opacity-80'>writing</h1>
+
+  <div>
+    <WritingCardLeft
+      title='Voluptate ea mollit tempor cupidatat fugiat magna tempor ut.'
+      description='Ea incididunt commodo et aute nulla officia pariatur do quis enim et excepteur commodo laboris.'
+      ,
+      publishedDate='2024-06-02'
+      ,
+      image='https://docs.astro.build/assets/rose.webp'
+      imageAlt='Nisi Lorem dolore do veniam ipsum sint duis est adipisicing.'
+    />
+
+    <WritingCardRight
+      title='Voluptate ea mollit tempor cupidatat fugiat magna tempor ut.'
+      description='Ea incididunt commodo et aute nulla officia pariatur do quis enim et excepteur commodo laboris.'
+      ,
+      publishedDate='2024-06-02'
+      ,
+      image='https://docs.astro.build/assets/rose.webp'
+      imageAlt='Nisi Lorem dolore do veniam ipsum sint duis est adipisicing.'
+    />
+
+    <WritingCardLeft
+      title='Voluptate ea mollit tempor cupidatat fugiat magna tempor ut.'
+      description='Ea incididunt commodo et aute nulla officia pariatur do quis enim et excepteur commodo laboris.'
+      ,
+      publishedDate='2024-06-02'
+      ,
+      image='https://docs.astro.build/assets/rose.webp'
+      imageAlt='Nisi Lorem dolore do veniam ipsum sint duis est adipisicing.'
+    />
+
+    <WritingCardRight
+      title='Voluptate ea mollit tempor cupidatat fugiat magna tempor ut.'
+      description='Ea incididunt commodo et aute nulla officia pariatur do quis enim et excepteur commodo laboris.'
+      ,
+      publishedDate='2024-06-02'
+      ,
+      image='https://docs.astro.build/assets/rose.webp'
+      imageAlt='Nisi Lorem dolore do veniam ipsum sint duis est adipisicing.'
+    />
+
+    <div>
+      <div class='flex w-full justify-around border-b border-dashed py-8 opacity-60'>
+        <p class='border-r border-dashed pr-12'>2024</p>
+
+        <div class='flex w-full flex-col gap-4'>
+          <div class='flex w-full justify-between pl-12'>
+            <p>Aliqua ut amet fugiat qui pariatur. In proident aliquip labore occaecat labore eu.</p>
+            <p>05/09</p>
+          </div>
+
+          <div class='flex w-full justify-between pl-12'>
+            <p>Dolor dolor Lorem velit irure non deserunt labore eiusmod.</p>
+            <p>25/12</p>
+          </div>
+        </div>
+      </div>
+
+      <div class='flex w-full justify-around border-b border-dashed py-8 opacity-60'>
+        <p class='border-r border-dashed pr-12'>2023</p>
+
+        <div class='flex w-full flex-col gap-4'>
+          <div class='flex w-full justify-between pl-12'>
+            <p>Aliqua ut amet fugiat qui pariatur. In proident aliquip labore occaecat labore eu.</p>
+            <p>05/09</p>
+          </div>
+
+          <div class='flex w-full justify-between pl-12'>
+            <p>Dolor dolor Lorem velit irure non deserunt labore eiusmod.</p>
+            <p>25/12</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </BaseLayout>
