--- a/src/pages/writing.astro
+++ b/src/pages/writing.astro
@@ -2,8 +2,8 @@
 import BaseLayout from '../layouts/BaseLayout.astro';
 import BackBtn from '../components/BackBtn.astro';
 
-import WritingCardLeft from '../components/WritingCardLeft.astro';
-import WritingCardRight from '../components/WritingCardRight.astro';
+import WritingCardLeft from '../components/writing/WritingCardLeft.astro';
+import WritingCardRight from '../components/writing/WritingCardRight.astro';
 ---
 
 <BaseLayout title='Yurik | Writing'>
@@ -68,7 +68,7 @@ import WritingCardRight from '../components/WritingCardRight.astro';
         </div>
       </div>
 
-      <div class='flex w-full justify-around border-b border-dashed py-8 opacity-60'>
+      <div class='flex w-full justify-around py-8 opacity-60'>
         <p class='border-r border-dashed pr-12'>2023</p>
 
         <div class='flex w-full flex-col gap-4'>
@@ -80,6 +80,21 @@ import WritingCardRight from '../components/WritingCardRight.astro';
           <div class='flex w-full justify-between pl-12'>
             <p>Dolor dolor Lorem velit irure non deserunt labore eiusmod.</p>
             <p>25/12</p>
+          </div>
+
+          <div class='flex w-full justify-between pl-12'>
+            <p>Nostrud adipisicing adipisicing consectetur aute labore ut occaecat ut exercitation in incididunt magna.</p>
+            <p>03/12</p>
+          </div>
+
+          <div class='flex w-full justify-between pl-12'>
+            <p>Cupidatat labore Lorem culpa officia sunt fugiat do sint.</p>
+            <p>25/06</p>
+          </div>
+
+          <div class='flex w-full justify-between pl-12'>
+            <p>Occaecat qui occaecat quis veniam id tempor laboris ea.</p>
+            <p>27/11</p>
           </div>
         </div>
       </div>
