refactor: update import paths to use aliases

--- a/src/pages/experiences.astro
+++ b/src/pages/experiences.astro
@@ -1,8 +1,8 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro';
-import BackBtn from '../components/BackBtn.astro';
+import BaseLayout from '@layouts/BaseLayout.astro';
+import BackBtn from '@components/BackBtn.astro';
 
-import ExperiencesCard from '../components/experiences/ExperiencesCard.astro';
+import ExperiencesCard from '@components/experiences/ExperiencesCard.astro';
 ---
 
 <BaseLayout title='Yurik | Experiences'>
