--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro';
-import Works from '../components/Works.astro';
+import BaseLayout from '@layouts/BaseLayout.astro';
+import Works from '@components/Works.astro';
 ---
 
 <BaseLayout title='Yurik | Home'>
