--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,8 +1,8 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro';
-import BackBtn from '../components/BackBtn.astro';
+import BaseLayout from '@layouts/BaseLayout.astro';
+import BackBtn from '@components/BackBtn.astro';
 
-import ProjectsCard from '../components/projects/ProjectsCard.astro';
+import ProjectsCard from '@components/projects/ProjectsCard.astro';
 ---
 
 <BaseLayout title='Yurik | Projects'>
