--- a/src/pages/writing.astro
+++ b/src/pages/writing.astro
@@ -1,9 +1,9 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro';
-import BackBtn from '../components/BackBtn.astro';
+import BaseLayout from '@layouts/BaseLayout.astro';
+import BackBtn from '@components/BackBtn.astro';
 
-import WritingCardLeft from '../components/writing/WritingCardLeft.astro';
-import WritingCardRight from '../components/writing/WritingCardRight.astro';
+import WritingCardLeft from '@components/writing/WritingCardLeft.astro';
+import WritingCardRight from '@components/writing/WritingCardRight.astro';
 ---
 
 <BaseLayout title='Yurik | Writing'>
