--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 ---
-import getYear from '../utils/getYear';
+import getYear from '@utils/getYear';
 ---
 
 <footer class='border-t border-grey-text dark:border-opacity-20 border-opacity-40 p-4 opacity-60 text-sm dark:text-grey-text opacity-100 dark:opacity-70'>
