--- a/src/components/Works.astro
+++ b/src/components/Works.astro
@@ -1,7 +1,7 @@
 ---
 import ProjectCard from './ProjectCard.astro';
-import { projects } from '../data/projects';
-import { writings } from '../data/writings';
+import { projects } from '@data/projects';
+import { writings } from '@data/writings';
 
 import { Icon } from 'astro-icon/components';
 ---
