--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,11 +3,14 @@ import '@fontsource-variable/inter';
 import '@fontsource-variable/newsreader';
 import '@fontsource/ibm-plex-sans';
 
-import Footer from '../components/Footer.astro';
-import DarkMode from '../components/DarkMode.astro';
+import Container from '@components/Container.astro';
+
+import Footer from '@components/Footer.astro';
+import DarkMode from '@components/DarkMode.astro';
 
 interface Props {
   title: string;
+  description: string;
 }
 
 const { title } = Astro.props;
