--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,7 +4,7 @@
 
 html {
   overflow-y: scroll;
-  color-scheme: light;
+  color-scheme: dark;
 }
 
 html.dark {
@@ -32,10 +32,17 @@ footer {
 }
 
 .animate {
-  @apply opacity-0 translate-y-3;
+  @apply translate-y-3 opacity-0;
   @apply transition-all duration-700 ease-out;
 }
 
 .animate.show {
-  @apply opacity-100 translate-y-0;
+  @apply translate-y-0 opacity-100;
 }
+
+article {
+  @apply prose max-w-full dark:prose-invert prose-img:mx-auto prose-img:my-auto;
+  @apply prose-headings:font-semibold prose-p:font-ibm;
+  @apply prose-headings:text-black-custom prose-headings:dark:text-white-custom;
+}
+
