--- a/src/components/BackBtn.astro
+++ b/src/components/BackBtn.astro
@@ -2,13 +2,14 @@
 import { Icon } from 'astro-icon/components';
 ---
 
-<a href='/' class='absolute left-5 top-5 flex gap-4 dark:opacity-40 opacity-60 transition duration-300 ease-in-out hover:opacity-80'>
+<div
+  id='backBtn'
+  class='font-serif absolute left-5 top-5 flex gap-4 opacity-60 transition duration-300 ease-in-out hover:cursor-pointer hover:opacity-80 dark:opacity-40'>
   <Icon name='eva:diagonal-arrow-left-up-fill' />
-  <p class="italic">home</p></a
->
+  <p class='font-news italic'>back</p>
+</div>
 
-<style>
-  a {
-    font-family: 'Newsreader Variable', serif;
-  }
-</style>
+<script>
+  const backBtn = document.getElementById('backBtn');
+  backBtn.addEventListener('click', () => window.history.back());
+</script>
