fix: make backBtn nullable

--- a/src/components/BackBtn.astro
+++ b/src/components/BackBtn.astro
@@ -11,5 +11,5 @@ import { Icon } from 'astro-icon/components';
 
 <script>
   const backBtn = document.getElementById('backBtn');
-  backBtn.addEventListener('click', () => window.history.back());
+  backBtn?.addEventListener('click', () => window.history.back());
 </script>
